src/test/ui/xcrate/xcrate-unit-struct.stderr
error[E0423]: expected value, found struct `xcrate_unit_struct::StructWithFields`
  --> $DIR/xcrate-unit-struct.rs:9:13
   |
LL |     let _ = xcrate_unit_struct::StructWithFields;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use struct literal syntax instead: `xcrate_unit_struct::StructWithFields { foo: val }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
